# MMASeq

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  pyproject.toml  search.html  sitemap.xml
description/: index.html
docs/: deployment.md  description.md  installation.md  supported_analysis.md  tutorials.md
installation/: index.html
references/: index.html
search/: search_index.json
src/mmaseq/: create.py  deploy.py  mmaseq.py
src/mmaseq/config/species_configs/: E_Faecalis.yaml  E_Faecium.yaml  N_meningitidis.yaml  all.yaml
src/mmaseq/utils/: config_handlers.py  helpers.py  logging_setup.py  output_handlers.py  result_paths.py  results_aggregator.py  sample_config.py  utils.py
src/mmaseq/workflow/: Snakefile
src/mmaseq/workflow/envs/: amrfinder.yaml  bcftools.yaml  blast.yaml  bowtie2.yaml  kleborate.yaml  kmeraligner.yaml  meningotype.yaml  minimap2.yaml  mlst.yaml  plasmidfinder.yaml  py_utls.yaml  resfinder.yaml  samtools.yaml  seqsero2.yaml  serotypefinder.yaml  shovill.yaml  sistr.yaml  skesa.yaml  spades.yaml  virulencefinder.yaml
src/mmaseq/workflow/rules/: assemblers.smk  custom_analysis.smk  db_fetch.smk  db_setup.smk  mappers.smk  screening.smk  typing.smk  variant_calling.smk
src/mmaseq/workflow/scripts/: deletion_identifier.py  determine_versions.py  versions.py
supported_analysis/: index.html
supported_species/: index.html
tools_databases/: index.html
tutorials/: index.html
