[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "MMAseq"
version = "1.0"
description = "Mixed Microbial Analysis on Sequencing data"
readme = "README.md"
requires-python = ">=3.13"
license = { file = "LICENSE" }
dependencies = [
    "snakemake",
    "pandas",
]
authors = [
    {name = "Kasper Thystrup Karstensen", email = "kathka@gmail.com"},
    {name = "Simone Scrima", email = "simonescrima@gmail.com"},
]
maintainers = [
    {name = "Kasper Thystrup Karstensen", email = "kathka@gmail.com"},
    {name = "Simone Scrima", email = "simonescrima@gmail.com"}

]

[project.urls]
Documentation = "https://ssi-dk.github.io/MMASeq"
Repository = "https://github.com/ssi-dk/MMASeq"

[tool.hatch.build.targets.wheel]
packages = ["src/mmaseq"]

[tool.hatch.build.targets.sdist]
only-include = ["src/mmaseq", "README.md", "LICENSE", "pyproject.toml"]

[tool.hatch.build]
exclude = [
  "src/mmaseq/data/reads/*.gz",
  "src/mmaseq/config/*yaml",
  "!src/mmaseq/config/results_catalogue.yaml",
  "**/__pycache__/**",
  "**/.snakemake/**"
]

[project.scripts]
mmadeploy = "mmaseq.deploy:launcher"
mmacreate = "mmaseq.create:launcher"
mmaseq = "mmaseq.mmaseq:launcher"
